<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerDetailActivity"
    android:weightSum="100">

    <ImageView
        android:id="@+id/iv_photo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="70"
        android:scaleType="fitXY"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@string/sample_player_name"/>

    <TextView
        android:id="@+id/tv_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="8dp"
        android:text="@string/sample_group_text"
        android:textSize="24sp"
        android:textColor="@color/group_text_color"/>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="8dp"
        android:text="@string/sample_player_name"
        android:textSize="24sp"
        android:textColor="@color/group_text_color"/>

    <TextView
        android:id="@+id/tv_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="8dp"
        android:text="@string/sample_player_number"
        android:textSize="22sp"
        android:textColor="@color/colorAccent"/>

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:text="@string/sample_description" />

</LinearLayout>