<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:layout_marginBottom="8dp">

    <RelativeLayout
        android:id="@+id/rl_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/card_bg"
        android:paddingBottom="@dimen/activity_vertical_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/tv_group_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/sample_group_text"
            android:textColor="@color/group_text_color"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_player_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_group_player"
            android:layout_alignStart="@+id/tv_group_player"
            android:layout_marginTop="8dp"
            android:lineSpacingExtra="8dp"
            android:text="@string/sample_player_name"
            android:textColor="@color/content_text_color"
            android:textSize="20sp" />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:background="@color/colorAccent"
            android:id="@+id/box_number"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/tv_group_player">

            <TextView
                android:id="@+id/tv_player_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_player_number"
                android:textColor="#ffffff"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

<!--        <TextView-->
<!--            android:id="@+id/tv_player_description"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_below="@+id/tv_player_name"-->
<!--            android:layout_alignStart="@+id/tv_player_name"-->
<!--            android:layout_marginTop="8dp"-->
<!--            android:text="@string/sample_description"-->
<!--            android:textColor="@color/content_text_color" />-->

        <Button
            android:id="@+id/btn_detail"
            android:background="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_player_name"
            android:layout_alignStart="@+id/tv_player_name"
            android:layout_marginTop="8dp"
            android:text="@string/detail"
            android:textColor="#ffffff"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"/>


    </RelativeLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civ_player_photo"
        android:src="@android:color/darker_gray"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toStartOf="@+id/rl_container"
        app:layout_constraintStart_toStartOf="@+id/rl_container"
        app:layout_constraintTop_toTopOf="@+id/rl_container" />

</androidx.constraintlayout.widget.ConstraintLayout>